<resources>
    <string name="app_name">MyWeather</string>
    <string name="refresh">Refresh</string>

    <string name="condition_201"> Burza z deszczem </string>
    <string name="condition_211"> Burza z piorunami </string>
    <string name="condition_301"> Mżawka </string>
    <string name="condition_500"> Lekki deszcz </string>
    <string name="condition_501"> Umiarkowane opady </string>
    <string name="condition_502"> Ulewny deszcz </string>
    <string name="condition_601"> Śnieg </string>
    <string name="condition_611"> Śnieg z deszczem </string>
    <string name="condition_801"> Zchmurzenie </string>
    <string name="condition_800"> Czyste niebo </string>
    <string name="condition_803"> Silne zachmurzenie </string>
    <string name="weather_details">WEATHER DETAILS</string>
    <string name="minimal_daily_temperatu">Minimal daily temperatu</string>
    <string name="maximal_daily_temperature">Maximal daily temperature</string>
    <string name="morning_temperature">Morning temperature</string>
    <string name="evening_temperature">Evening temperature</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="today">Today</string>
    <string name="City">City</string>

    <string-array name="cityName">
        <item>Moscow</item>
        <item>Delhi</item>
        <item>London</item>
        <item>New York</item>
        <item>Madrid</item>

    </string-array>

    <string-array name="cityId">
        <item>524901</item>
        <item>1273294</item>
        <item>6058560</item>
        <item>5106292</item>
        <item>3996933</item>

    </string-array>

</resources>
